--- a/style.css
+++ b/style.css
@@ -7,6 +7,15 @@
     width: 30%;
     border: 4px solid black;
     height: 200px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.element{
+    height: 20px;
+    border: 4px solid black;
 }
 
 /* *** */
