--- a/style.css
+++ b/style.css
@@ -16,6 +16,13 @@ button{
     font-size: 22px;
 }
 
+div{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+}
+
 h1{
     /* border: black solid; */
     margin: 5px;
@@ -89,6 +96,13 @@ input{
     border: 4px solid black;
 }
 
+.set-btn{
+    background-color: #009989;
+    height: fit-content;
+    border: #EDB92E solid 2px;
+    border-radius: 4px;
+}
+
 /* *** */
 /* IDs */
 /* *** */
@@ -111,4 +125,8 @@ input{
     margin: 20px;
     padding: 0px 20px 20px 20px;
     text-align: center;
+}
+
+#selection{
+    background-color: #CE1836;
 }
