--- a/style.css
+++ b/style.css
@@ -127,16 +127,23 @@ input{
     text-align: center;
 }
 
+#return{
+    margin: 20px;
+}
+
 #score-board{
     background-color: #A3A948;
-    color: #F85931;
+    color: #CE1836;
     display: flex;
     flex-direction: row;
+    border-radius: 20px;
 }
 
 #score-page{
-    width: 100%;
+    width: 300px;
     display: none;
+    text-align: center;
+    margin: 20px;
 }
 
 #selection{
@@ -146,4 +153,6 @@ input{
 #top-gamers,#top-scores{
     display: flex;
     flex-direction: column;
+    width: 100px;
+    font-size: 22px;
 }
