Added a wining message

--- a/style.css
+++ b/style.css
@@ -103,6 +103,12 @@ input{
     border-radius: 4px;
 }
 
+.win{
+    background-color: #CE1836;
+    color: #EDB92E ;
+    font-size: 50px;
+}
+
 /* *** */
 /* IDs */
 /* *** */
