--- a/style.css
+++ b/style.css
@@ -60,6 +60,7 @@ input{
     text-align: center;
     font-size: 22px;
     border: none;
+    padding: 10px;
 }
 
 /* Placeholder color https://www.w3schools.com/howto/howto_css_placeholder.asp */
